Implement restaurants and items endpoints
